fixed images index on small screen

--- a/src/scss/components/_layouts.scss
+++ b/src/scss/components/_layouts.scss
@@ -8,7 +8,7 @@
 }
 .content-wrapper {
   max-width: 1000px; 
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
 }
 .content-center {
